# mcp-hello

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  bootstrap.sh  docker-compose.yml  mcp-server.json  mcp_server.py  pyproject.toml  requirements.txt
dsp/: Tool Calling.postman_collection.json  postman.md
dsp/mcp-client/: README.md  pyproject.toml
dsp/mcp-client/api/: example_usage.py  main.py  mcp_client.py
mcp_hello/: __init__.py  client_example.py  http_client_example.py  server.py
scripts/: publish.sh
tests/: test_server.py
