[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hello"
version = "1.2.0"
description = "A hello world MCP server using FastMCP"
authors = [
    {name = "Jia Jia", email = "angersax@sina.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "anthropic>=0.50.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",    
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
mcp-hello = "mcp_hello.server:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
